syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";

option go_package = "review-service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

// 定义评价服务
service Review {
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
		option (google.api.http) = {
			post: "/v1/review",
			body: "*"
		};
	};
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply);
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply);
	rpc GetReview (GetReviewRequest) returns (GetReviewReply);
	rpc ListReview (ListReviewRequest) returns (ListReviewReply);
}

// 创建评价请求
message CreateReviewRequest {
	int64 userId = 1; 		// 用户ID 
	int64 orderId = 2;		// 订单ID
	int32 score = 3;		// 评分
	int32 serviceScore = 4;	// 服务评分
	int32 expressScore = 5;	// 物流评分
	string content = 6;		// 评价内容
	string picInfo = 7;		// 评价图片
	string videoInfo = 8;	// 评价视频
	string voiceInfo = 9;	// 评价语音
	bool anonymous = 10;	// 是否匿名
}

// 创建评价响应
message CreateReviewReply {

}

message UpdateReviewRequest {}
message UpdateReviewReply {}

message DeleteReviewRequest {}
message DeleteReviewReply {}

message GetReviewRequest {}
message GetReviewReply {}

message ListReviewRequest {}
message ListReviewReply {}